# Vendora

./: .env.example  .gitignore  CODEOWNERS  README.md  implementation_plan.md.resolved  pyproject.toml  task.md.resolved
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: main.py  mcp_client.py  orchestrator.py  requirements.txt
backend/agents/: core.py
cookbook/: main.py  requirements.txt
cookbook/agents/root/: root_agent.py  router.py  token_ledger.py
cookbook/agents/workers/: worker_w1.py  worker_w3.py
cookbook/llm/: cost_estimator.py  llm_client.py
cookbook/mcp/: mcp_1_filesystem.py  mcp_2_database.py  mcp_3_websearch.py
multi-agent-system/agents/supervisors/: supervisor_m1.py  task_decomposer.py
multi-agent-system/agents/workers/: worker_w2.py  worker_w4.py
multi-agent-system/config/: budgets.yaml  rate_limits.yaml
multi-agent-system/llm/: llm_client.py
multi-agent-system/mcp/: mcp_4_reasoning.py
multi-agent-system/memory/: long_term.py  short_term.py
multi-agent-system/orchestration/: graph.py  state.py
scripts/: run_server.bat  run_server.sh  verify_agent.bat  verify_agent.sh
vendora/: README.md
